kafka-cluster/zoo-navigator-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: z-nav
  name: z-nav
  namespace: default
spec:
  containers:
    - name: zoo-navigator-api
      imagePullPolicy: IfNotPresent #Always
      image: elkozmon/zoonavigator-api:0.5.0
      imagePullPolicy: Always
      ports:
      - containerPort: 9000
        protocol: TCP
    - name: zoo-navigator-web
      image: elkozmon/zoonavigator-web:0.5.0 #Always
      imagePullPolicy: IfNotPresent
      ports:
      - containerPort: 8000
        protocol: TCP
  hostname: z-nav
