kafka-cluster/zoo-navigator-sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: znav-svc
#  labels:
#    app: znav
# http://192.168.122.242:30123/connect?returnUrl=
spec:
  type: NodePort #ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30123
  selector:
    app: z-nav
